[bugfix] fix the issue where resizing the screen size to mobile size will set the visibility to style popup to visible

--- a/src/constants/popup.scss
+++ b/src/constants/popup.scss
@@ -56,12 +56,14 @@ $popup-icon-width: 18px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    
     &.open {
-      animation: bottom-up 0.3s backwards;
+      animation: bottom-up 0.3s;
     }
     
     &.closed {
-      animation: up-bottom 0.3s backwards;
+      transition: visibility 0s 0.3s;
+      animation: up-bottom 0.3s;
     }
   }
 }
@@ -78,12 +80,10 @@ $popup-icon-width: 18px;
 
 @keyframes up-bottom {
   0% {
-    visibility: visible;
     transform: translateY(0%);    
   }
 
   100% {
-    visibility: hidden;
     transform: translateY(100%);
   }
 }
